--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,375 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  margin: 0px;
+  padding: 0px;  
+  scroll-behavior: smooth;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  --secondary: #035241;
+  --light: #f5f5f5;
+  --primary: #4cb69f;
+  --grey: #201d3a;
+}
+
+
+body{
+  font-family: 'Quicksand', sans-serif;
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+main {
+  flex: 1 0 auto;
+}
+
+.nav {
+  background-color: var(--primary);
+  border-bottom: 2px solid var(--secondary);
+  box-shadow: 1px 1px 1px 1px var(--secondary);
+}
+
+.color-light {
+  color: var(--light) !important;
+}
+
+.btn {
+  background-color: var(--secondary) !important;
+  border: 1px solid var(--secondary) !important;
+  color: var(--primary) !important;
+  border-radius: 25px;
+}
+
+.btn:hover {
+  background-color: var(--light) !important;
+  border: 1px solid var(--light) !important;
+  color: var(--primary) !important;
+}
+
+
+.dark-color {
+  color: var(--light);
+}
+
+.dark-color:hover {
+  color: var(--light);
+  text-decoration: none;
+  border-bottom: 3px solid var(--grey);
+}
+
+.jumbotron {
+  height: 500px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  background-image: linear-gradient(180deg, var(--secondary), var(--grey));
+  border-radius: 0px;
+  margin: 0px;
+}
+
+.about {
+  min-height: 500px;
+  display: flex;
+  align-items: center;
+
+}
+
+.orange-bg {
+  background-color: var(--primary);
+  color: var(--light);
+  padding: 50px;
+}
+
+.orange-border {
+  border-bottom: 3px solid var(--grey);
+  border-right: 3px solid var(--primary);
+  padding-bottom: 13px;
+}
+
+.services {
+  padding: 17px;
+  transition: 1s all;
+}
+
+.services:hover {
+  background-color: var(--grey);
+  border-radius: 20px;
+  color: var(--light);
+}
+
+.grey {
+  background-image: linear-gradient(180deg, var(--secondary), var(--grey));
+  color: var(--light);
+}
+
+.darkbrown {
+  color: var(--grey);
+}
+
+.dark-text {
+  color: var(--secondary);
+}
+
+.work {
+  padding: 17px;
+  transition: 1s all;
+}
+
+.work:hover {
+  background-color: rgb(100, 93, 93);
+  border-radius: 20px;
+  color: var(--light);
+}
+
+.green {
+  color: green;
+}
+
+.purple {
+  color: purple;
+}
+
+.btn-2 {
+  background-color: var(--primary) !important;
+  border: 1px solid var(--secondary) !important;
+  color: var(--light) !important;
+  width: 100%;
+  border-radius: 25px;
+}
+
+.btn-2:hover {
+  background-color: var(--light) !important;
+  border: 1px solid var(--light) !important;
+  color: var(--primary) !important;
+}
+
+.btn-3 {
+  background-color: var(--secondary) !important;
+  border: 1px solid var(--secondary) !important;
+  color: var(--primary) !important;
+  width: 100%;
+  border-radius: 25px;
+}
+
+.btn-3:hover {
+  background-color: var(--light) !important;
+  border: 1px solid var(--light) !important;
+  color: var(--primary) !important;
+}
+
+.darkcolor {
+  color: var(--grey);
+}
+
+.darkcolor:hover {
+  color: var(--grey);
+  text-decoration: none;
+  border-bottom: 3px solid var(--light);
+}
+
+.faq {
+  height: 200px;
+}
+
+.darkorange {
+  color: var(--primary);
+}
+
+.apply {
+  background-color: var(--grey);
+  color: var(--light);
+}
+
+.apply_form {
+  background-color: var(--light);
+  height: 500px;
+  overflow: scroll;
+  border-radius: 20px;
+  max-width: 700px;
+}
+
+.apply_number {
+  border: 1px solid var(--grey);
+  border-radius: 25px;
+  padding: 10px;
+  color: var(--secondary);
+
+}
+
+.apply_hr {
+  display: inline-block;
+  width: 70px;
+  background-color: var(--grey);
+  height: 5px;
+  margin: 3px;
+  border-radius: 50px;
+}
+
+.error {
+  color: var(--primary);
+}
+
+.btn-4 {
+  background-color: var(--secondary) !important;
+  border: 1px solid var(--secondary) !important;
+  color: var(--primary) !important;
+  width: 40%;
+  margin: 5px;
+  border-radius: 25px;
+
+}
+
+.btn-4:hover {
+  background-color: var(--primary) !important;
+  border: 1px solid var(--light) !important;
+  color: var(--light) !important;
+}
+
+.btn-4:disabled{
+  border: 1px solid #999999 !important;
+  background-color: #cccccc !important;
+  color: #666666 !important;
+}
+
+
+.apply_border {
+  border: 2px solid var(--primary);
+  border-radius: 1px;
+  padding: 10px;
+  color: var(--secondary);
+  transition: all 0.5s linear;
+  border-radius: 25px;
+
+}
+
+.apply_background {
+  background-color: var(--primary);
+  border: 1px solid var(--primary);
+  color: white;
+  transition: all 0.5s linear;
+}
+
+input[type="date"]::before {
+	color: #999999;
+	content: attr(placeholder);
+}
+input[type="date"] {
+	color: #ffffff;
+}
+input[type="date"]:focus,
+input[type="date"]:valid {
+	color: #666666;
+}
+input[type="date"]:focus::before,
+input[type="date"]:valid::before {
+	content: "" !important;
+}
+
+@media screen and (min-width: 480px) {
+  .welcome {
+    margin-top: 70px;
+  }
+  .apply_form {
+    margin-left: 50px;
+  }
+}
+
+@media screen and (max-width: 580px) {
+  .apply_number {
+    border: 1px solid var(--grey);
+    border-radius: 25px;
+    padding: 7px;
+    color: var(--secondary);
+  
+  }
+  
+  .apply_hr {
+    display: inline-block;
+    width: 20px;
+    background-color: var(--grey);
+    height: 5px;
+    margin: 3px;
+    border-radius: 50px;
+  }
+
+  .apply_border {
+    border: 2px solid var(--primary);
+    border-radius: 1px;
+    padding: 7px;
+    color: var(--secondary);
+    transition: all 0.5s linear;
+    border-radius: 25px;
+  
+  }
+  
+  .apply_background {
+    background-color: var(--primary);
+    border: 1px solid var(--primary);
+    color: white;
+    transition: all 0.5s linear;
+  }
+
+  .btn-4 {
+    background-color: var(--secondary) !important;
+    border: 1px solid var(--secondary) !important;
+    color: var(--primary) !important;
+    width: 100%;
+    border-radius: 25px;
+  
+  }
+}
+
+
+@media screen and (min-width: 581px) and (max-width: 800px) {
+  .apply_number {
+    border: 1px solid var(--grey);
+    border-radius: 25px;
+    padding: 10px;
+    color: var(--secondary);
+  
+  }
+  
+  .apply_hr {
+    display: inline-block;
+    width: 30px;
+    background-color: var(--grey);
+    height: 5px;
+    margin: 3px;
+    border-radius: 50px;
+  }
+
+  .apply_border {
+    border: 2px solid var(--primary);
+    border-radius: 1px;
+    padding: 10px;
+    color: var(--secondary);
+    transition: all 0.5s linear;
+    border-radius: 25px;
+  
+  }
+  
+  .apply_background {
+    background-color: var(--primary);
+    border: 1px solid var(--primary);
+    color: white;
+    transition: all 0.5s linear;
+  }
+
+  .btn-4 {
+    background-color: var(--secondary) !important;
+    border: 1px solid var(--secondary) !important;
+    color: var(--primary) !important;
+    width: 100%;
+    border-radius: 25px;
+  
+  }
+}
+
+
+.error-background {
+  background-color: crimson;
+  color: #fff;
+  font-size: large;
+  font-weight: bolder;
+  text-align: center;
 }
