--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,10 @@
 }
 
 :root {
-  --secondary: #035241;
-  --light: #f5f5f5;
-  --primary: #4cb69f;
-  --grey: #201d3a;
+  --primary: #f8931f;
+  --secondary: #000000;
+  --light: #ffffff;
+  --grey: #81817f;
 }
 
 
